--- a/index.html
+++ b/index.html
@@ -23,19 +23,14 @@
           <!-- Logo y título -->
           <button class="brand" id="header-logo" type="button" aria-label="Ir a inicio">
             <img src="/logo-rincon.png" alt="El Rincón Español" class="logo-img" onerror="this.style.display='none'" />
-            <h1 class="logo">Español para Niños</h1>
+            <h1 class="logo">El Rincón Español</h1>
           </button>
-
-          <!-- Navegación central -->
-          <nav class="header-nav">
-            <a href="#" class="header-nav-link">Para Padres</a>
-            <a href="#" class="header-nav-link">Ayuda</a>
-          </nav>
 
           <!-- Área de usuario (derecha) -->
           <div class="header-actions">
+            <a href="#" class="header-nav-link" id="nav-parents" data-section="parents">Para Padres</a>
             <div id="header-user" class="header-user is-hidden">
-              <span class="user-greet">👋 <strong id="user-name"></strong></span>
+              <span class="user-greet">Hola, <strong id="user-name"></strong></span>
               <button id="header-logout" class="header-logout-btn">Salir</button>
             </div>
             <div id="header-auth" class="header-auth">
@@ -59,7 +54,7 @@
                 </div>
               </div>
               <div class="hero-image">
-                <img src="/loro-mascota.png" alt="Loro mascota con auriculares y letras" onerror="this.src='https://lh3.googleusercontent.com/aida-public/AB6AXuBerYcoH3rljDtW13RWvsdOTiVAh6oHfke-wRO4JuATqBVGjKUoXtpwJY9IfK89bT6ERrfMgIqPJopNstez8GKSHVEfh-fZYQvNlx52nmal1dyhKRf840ngZ_EENMEAzTKLeNJ1qxw6vlQMepOmIk7Mk4DBUgC-N3DZbpbsEGS0Ffu5KtxI-rNNnarkvWTBLPr444TXZXcc-J8c2dLs-aGBM_B341DDX0B4tEBfeVQZyZoh-Q8g1ADo03jVmg1bDAk15YCxnGItLwo'">
+                <img src="/mascota.png" alt="Loro mascota con auriculares y letras" onerror="this.src='https://lh3.googleusercontent.com/aida-public/AB6AXuBerYcoH3rljDtW13RWvsdOTiVAh6oHfke-wRO4JuATqBVGjKUoXtpwJY9IfK89bT6ERrfMgIqPJopNstez8GKSHVEfh-fZYQvNlx52nmal1dyhKRf840ngZ_EENMEAzTKLeNJ1qxw6vlQMepOmIk7Mk4DBUgC-N3DZbpbsEGS0Ffu5KtxI-rNNnarkvWTBLPr444TXZXcc-J8c2dLs-aGBM_B341DDX0B4tEBfeVQZyZoh-Q8g1ADo03jVmg1bDAk15YCxnGItLwo'">
               </div>
             </section>
 
@@ -238,10 +233,20 @@
                   </button>
                 </div>
 
-                <!-- Filtros por Bloque -->
-                <div class="vocabulario-filters" id="vocabulario-filters">
-                  <button class="vocabulario-filter-chip is-active" data-filter="all">Todos los bloques</button>
-                  <!-- Los filtros se cargarán dinámicamente -->
+                <!-- Controles: Búsqueda y Filtros -->
+                <div class="vocabulario-controls">
+                  <div class="vocabulario-search-bar">
+                    <svg class="vocabulario-search-icon" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                      <circle cx="9" cy="9" r="6" stroke="currentColor" stroke-width="2"/>
+                      <path d="M14 14L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    <input id="vocabulario-search" type="search" placeholder="Buscar tema..." aria-label="Buscar temas de vocabulario" />
+                  </div>
+
+                  <div class="vocabulario-filters" id="vocabulario-filters">
+                    <button class="vocabulario-filter-chip is-active" data-filter="all">Todos los bloques</button>
+                    <!-- Los filtros se cargarán dinámicamente -->
+                  </div>
                 </div>
 
                 <!-- Grid de Cards -->
@@ -281,9 +286,19 @@
                   </button>
                 </div>
 
-                <!-- Filtros por Bloque -->
-                <div class="vocabulario-filters" id="gramatica-filters">
-                  <button class="vocabulario-filter-chip is-active" data-filter="all">Todos los bloques</button>
+                <!-- Controles: Búsqueda y Filtros -->
+                <div class="vocabulario-controls">
+                  <div class="vocabulario-search-bar">
+                    <svg class="vocabulario-search-icon" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                      <circle cx="9" cy="9" r="6" stroke="currentColor" stroke-width="2"/>
+                      <path d="M14 14L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    <input id="gramatica-search" type="search" placeholder="Buscar tema..." aria-label="Buscar temas de gramática" />
+                  </div>
+
+                  <div class="vocabulario-filters" id="gramatica-filters">
+                    <button class="vocabulario-filter-chip is-active" data-filter="all">Todos los bloques</button>
+                  </div>
                 </div>
 
                 <!-- Grid de Cards -->
@@ -325,6 +340,107 @@
             </div>
             <div class="game-content" id="game-content"></div>
           </section>
+
+          <!-- Página Para Padres -->
+          <div id="parents-page" class="page-view hidden">
+            <section class="parents-section">
+              <button class="parents-back-btn" id="parents-back-btn">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                  <path d="M12 4L6 10L12 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Volver
+              </button>
+
+              <div class="parents-hero">
+                <h1 class="parents-title">Para Padres y Educadores</h1>
+                <p class="parents-subtitle">Descubre cómo ayudamos a tus hijos a aprender español de forma divertida y efectiva</p>
+              </div>
+
+              <div class="parents-content">
+                <!-- Misión y Visión -->
+                <div class="parents-card parents-card--mission">
+                  <div class="parents-card__icon">🎯</div>
+                  <h2 class="parents-card__title">Nuestra Misión</h2>
+                  <p class="parents-card__text">
+                    El Rincón Español es una plataforma educativa diseñada especialmente para niños de 5 a 12 años 
+                    que están aprendiendo español. Nuestro objetivo es hacer que el aprendizaje del idioma sea una 
+                    experiencia divertida, interactiva y memorable.
+                  </p>
+                </div>
+
+                <div class="parents-card parents-card--method">
+                  <div class="parents-card__icon">📚</div>
+                  <h2 class="parents-card__title">Metodología</h2>
+                  <p class="parents-card__text">
+                    Utilizamos un enfoque basado en el juego y la gamificación para enseñar vocabulario, gramática 
+                    y comprensión. Los niños aprenden mejor cuando se divierten, y nuestros juegos están diseñados 
+                    para mantener su interés mientras refuerzan conceptos clave del idioma.
+                  </p>
+                </div>
+
+                <div class="parents-card parents-card--features">
+                  <div class="parents-card__icon">✨</div>
+                  <h2 class="parents-card__title">Características</h2>
+                  <ul class="parents-features-list">
+                    <li>🎮 Juegos interactivos adaptados a diferentes niveles</li>
+                    <li>🎬 Videos educativos con contenido apropiado para niños</li>
+                    <li>📖 Lecciones de vocabulario organizadas por temas</li>
+                    <li>📝 Ejercicios de gramática explicados de forma sencilla</li>
+                    <li>🏆 Sistema de puntos y recompensas para motivar</li>
+                    <li>👨‍👩‍👧‍👦 Entorno seguro y sin publicidad</li>
+                  </ul>
+                </div>
+
+                <!-- Perfil del Profesor -->
+                <div class="parents-professor">
+                  <div class="parents-professor__image">
+                    <img src="/profesor.jpg" alt="Foto del profesor" onerror="this.src='https://ui-avatars.com/api/?name=Profesor&background=00D97E&color=fff&size=200'">
+                  </div>
+                  <div class="parents-professor__info">
+                    <h2 class="parents-professor__name">Sobre el Profesor</h2>
+                    <h3 class="parents-professor__role">Creador y Educador</h3>
+                    <div class="parents-professor__bio">
+                      <p>
+                        Soy un profesor apasionado por la enseñanza del español a niños. Con años de experiencia 
+                        en educación infantil, he desarrollado esta plataforma para hacer que el aprendizaje 
+                        del español sea accesible y divertido para todos los niños.
+                      </p>
+                      <p>
+                        Mi enfoque se basa en la inmersión lúdica, donde los niños aprenden jugando y 
+                        descubriendo el idioma de forma natural, sin presión y a su propio ritmo.
+                      </p>
+                    </div>
+                    <div class="parents-professor__credentials">
+                      <div class="credential">
+                        <span class="credential__icon">🎓</span>
+                        <span class="credential__text">Licenciatura en Educación</span>
+                      </div>
+                      <div class="credential">
+                        <span class="credential__icon">📜</span>
+                        <span class="credential__text">Especialización en Enseñanza de Idiomas</span>
+                      </div>
+                      <div class="credential">
+                        <span class="credential__icon">👶</span>
+                        <span class="credential__text">+10 años de experiencia con niños</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Contacto -->
+                <div class="parents-contact">
+                  <h2 class="parents-contact__title">¿Tienes preguntas?</h2>
+                  <p class="parents-contact__text">
+                    Estamos aquí para ayudarte. Si tienes alguna pregunta sobre la plataforma o cómo 
+                    puede beneficiar a tu hijo, no dudes en contactarnos.
+                  </p>
+                  <a href="mailto:contacto@elrinconespanol.com" class="parents-contact__btn">
+                    📧 Contactar
+                  </a>
+                </div>
+              </div>
+            </section>
+          </div>
         </div>
       </main>
 
