refactor: remove unused game controller, theme management, audio utilities, and game state management
- Deleted gameController.js as it contained unused methods and logic.
- Removed themes.js which managed theme loading and caching.
- Eliminated audio.js for text-to-speech and sound effects as they were not utilized.
- Removed gameState.js that held global game state management functions and variables.
- Updated dom.js to remove references to the game container.

--- a/index.html
+++ b/index.html
@@ -305,32 +305,20 @@
             </section>
           </div>
 
-          <!-- Página de Juegos -->
+          <!-- Página de Juegos (próximamente) -->
           <div id="games-page" class="page-view hidden">
             <section class="section-container" id="vocabulary-section">
               <div class="section-header">
                 <button class="back-btn" id="vocabulary-back-btn" data-i18n="backToMenu"></button>
                 <h2 class="section-title" data-i18n="gamesTitle"></h2>
               </div>
-              <div class="games-grid" id="vocabulary-games-grid">
-                <!-- Juegos de vocabulario se cargarán aquí -->
+              <div class="coming-soon-message" style="text-align: center; padding: 60px 20px;">
+                <div style="font-size: 4rem; margin-bottom: 20px;">🎮</div>
+                <h3 style="color: var(--color-text-primary); margin-bottom: 10px;">¡Próximamente!</h3>
+                <p style="color: var(--color-text-secondary);">Estamos preparando juegos increíbles para ti.</p>
               </div>
             </section>
           </div>
-
-          <!-- Contenedor del juego -->
-          <section class="game-container hidden" id="game-container">
-            <div class="game-header">
-              <button class="back-btn" id="back-btn" data-i18n="back"></button>
-              <h3 class="game-title" id="game-title"></h3>
-              <div class="game-stats">
-                <div class="score" id="score" data-i18n="score"></div>
-                <div class="progress" id="progress">1/5</div>
-                <div class="lives" id="lives">❤️❤️❤️❤️❤️</div>
-              </div>
-            </div>
-            <div class="game-content" id="game-content"></div>
-          </section>
 
           <!-- Página Para Padres -->
           <div id="parents-page" class="page-view hidden">
