--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
           <!-- Área de usuario (derecha) -->
           <div class="header-actions">
+            <a href="#" class="header-nav-link" id="nav-ranking" data-section="ranking">Ranking</a>
             <a href="#" class="header-nav-link" id="nav-parents" data-section="parents" data-i18n="forParents"></a>
             <button class="lang-toggle" id="lang-toggle" aria-label="Cambiar idioma">🇬🇧 EN</button>
             <div id="header-user" class="header-user is-hidden">
@@ -418,6 +419,25 @@
                     📧 <span data-i18n="contactBtn"></span>
                   </a>
                 </div>
+              </div>
+            </section>
+          </div>
+
+          <!-- Página Ranking -->
+          <div id="ranking-page" class="page-view hidden">
+            <section class="ranking-section">
+              <button class="ranking-back-btn" id="ranking-back-btn">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                  <path d="M12 4L6 10L12 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <span>Volver</span>
+              </button>
+              <div class="ranking-hero">
+                <h1 class="ranking-title">Ranking Global</h1>
+                <p class="ranking-subtitle">Los mejores jugadores de la plataforma</p>
+              </div>
+              <div id="ranking-container">
+                <!-- Se llena dinámicamente -->
               </div>
             </section>
           </div>
