feat: update ranking UI with emoji and adjust hangman placeholder image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <!-- Área de usuario (derecha) -->
           <div class="header-actions">
-            <a href="#" class="header-nav-link" id="nav-ranking" data-section="ranking">Ranking</a>
+            <a href="#" class="header-nav-link" id="nav-ranking" data-section="ranking">🏆 Ranking</a>
             <a href="#" class="header-nav-link" id="nav-parents" data-section="parents" data-i18n="forParents"></a>
             <button class="lang-toggle" id="lang-toggle" aria-label="Cambiar idioma">🇬🇧 EN</button>
             <div id="header-user" class="header-user is-hidden">
