--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <div class="header-actions">
             <a href="#" class="header-nav-link" id="nav-ranking" data-section="ranking">🏆 Ranking</a>
             <a href="#" class="header-nav-link" id="nav-parents" data-section="parents" data-i18n="forParents"></a>
+            <button class="header-nav-link is-hidden" id="nav-admin-students" title="Gestión de alumnos">⚙️ Alumnos</button>
             <button class="lang-toggle" id="lang-toggle" aria-label="Cambiar idioma">🇬🇧 EN</button>
             <div id="header-user" class="header-user is-hidden">
               <span class="user-greet"><span data-i18n="greeting"></span> <strong id="user-name"></strong></span>
